--- a/source/catalog.html
+++ b/source/catalog.html
@@ -41,6 +41,7 @@
       </nav>
     </div>
   </header>
+
   <main class="main-catalog">
     <section class="catalog">
       <div class="catalog-wrapper container-content">
@@ -93,89 +94,89 @@
 
           <li class="catalog__item card">
             <div class="card__content-wrapper">
-            <div class="card__image-wrapper">
-              <img class="card__image" src="img/catalog-card-small-fish.png" width="68" height="86"
-                alt="Кошачья еда со вкусом рыбы, 500 грамм">
-            </div>
-            <div class="card__info-wrapper">
-              <h2 class="card__title">Cat Energy PRO 500 г</h2>
-              <p class="card__description">Масса
-                <span class="card__value">500 г</span>
-              </p>
-              <p class="card__description">Вкус
-                <span class="card__value">Рыба</span>
-              </p>
-              <p class="card__description">Цена
-                <span class="card__value">700 Р.</span>
-              </p>
-            </div>
+              <div class="card__image-wrapper">
+                <img class="card__image" src="img/catalog-card-small-fish.png" width="68" height="86"
+                  alt="Кошачья еда со вкусом рыбы, 500 грамм">
+              </div>
+              <div class="card__info-wrapper">
+                <h2 class="card__title">Cat Energy PRO 500 г</h2>
+                <p class="card__description">Масса
+                  <span class="card__value">500 г</span>
+                </p>
+                <p class="card__description">Вкус
+                  <span class="card__value">Рыба</span>
+                </p>
+                <p class="card__description">Цена
+                  <span class="card__value">700 Р.</span>
+                </p>
+              </div>
             </div>
             <button class="card__button button" type="button">Заказать</button>
           </li>
 
           <li class="catalog__item card">
             <div class="card__content-wrapper">
-            <div class="card__image-wrapper">
-              <img class="card__image" src="img/catalog-card-big-fish.png" width="84" height="101"
-                alt="Кошачья еда со вкусом рыбы, 1000 грамм">
+              <div class="card__image-wrapper">
+                <img class="card__image" src="img/catalog-card-big-fish.png" width="84" height="101"
+                  alt="Кошачья еда со вкусом рыбы, 1000 грамм">
+              </div>
+              <div class="card__info-wrapper">
+                <h2 class="card__title">Cat Energy PRO 1000 г</h2>
+                <p class="card__description">Масса
+                  <span class="card__value">1000 г</span>
+                </p>
+                <p class="card__description">Вкус
+                  <span class="card__value">Рыба</span>
+                </p>
+                <p class="card__description">Цена
+                  <span class="card__value">1000 Р.</span>
+                </p>
+              </div>
             </div>
-            <div class="card__info-wrapper">
-              <h2 class="card__title">Cat Energy PRO 1000 г</h2>
-              <p class="card__description">Масса
-                <span class="card__value">1000 г</span>
-              </p>
-              <p class="card__description">Вкус
-                <span class="card__value">Рыба</span>
-              </p>
-              <p class="card__description">Цена
-                <span class="card__value">1000 Р.</span>
-              </p>
-            </div>
-          </div>
             <button class="card__button button" type="button">Заказать</button>
           </li>
 
           <li class="catalog__item card">
             <div class="card__content-wrapper">
-            <div class="card__image-wrapper">
-              <img class="card__image" src="img/catalog-card-small-buckwheat.png" width="68" height="86"
-                alt="Кошачья еда со вкусом гречки, 500 грамм">
+              <div class="card__image-wrapper">
+                <img class="card__image" src="img/catalog-card-small-buckwheat.png" width="68" height="86"
+                  alt="Кошачья еда со вкусом гречки, 500 грамм">
+              </div>
+              <div class="card__info-wrapper">
+                <h2 class="card__title">Cat Energy slim 500 г</h2>
+                <p class="card__description">Масса
+                  <span class="card__value">500 г</span>
+                </p>
+                <p class="card__description">Вкус
+                  <span class="card__value">Гречка</span>
+                </p>
+                <p class="card__description">Цена
+                  <span class="card__value">400 Р.</span>
+                </p>
+              </div>
             </div>
-            <div class="card__info-wrapper">
-              <h2 class="card__title">Cat Energy slim 500 г</h2>
-              <p class="card__description">Масса
-                <span class="card__value">500 г</span>
-              </p>
-              <p class="card__description">Вкус
-                <span class="card__value">Гречка</span>
-              </p>
-              <p class="card__description">Цена
-                <span class="card__value">400 Р.</span>
-              </p>
-            </div>
-          </div>
             <button class="card__button button" type="button">Заказать</button>
           </li>
 
           <li class="catalog__item card">
             <div class="card__content-wrapper">
-            <div class="card__image-wrapper">
-              <img class="card__image" src="img/catalog-card-big-buckwheat.png" width="84" height="101"
-                alt="Кошачья еда со вкусом гречки, 1000 грамм">
+              <div class="card__image-wrapper">
+                <img class="card__image" src="img/catalog-card-big-buckwheat.png" width="84" height="101"
+                  alt="Кошачья еда со вкусом гречки, 1000 грамм">
+              </div>
+              <div class="card__info-wrapper">
+                <h2 class="card__title">Cat Energy slim 1000 г</h2>
+                <p class="card__description">Масса
+                  <span class="card__value">1000 г</span>
+                </p>
+                <p class="card__description">Вкус
+                  <span class="card__value">Гречка</span>
+                </p>
+                <p class="card__description">Цена
+                  <span class="card__value">700 Р.</span>
+                </p>
+              </div>
             </div>
-            <div class="card__info-wrapper">
-              <h2 class="card__title">Cat Energy slim 1000 г</h2>
-              <p class="card__description">Масса
-                <span class="card__value">1000 г</span>
-              </p>
-              <p class="card__description">Вкус
-                <span class="card__value">Гречка</span>
-              </p>
-              <p class="card__description">Цена
-                <span class="card__value">700 Р.</span>
-              </p>
-            </div>
-          </div>
             <button class="card__button button" type="button">Заказать</button>
           </li>
 
@@ -202,7 +203,8 @@
           </li>
 
           <li class="catalog__item card card-show-more">
-            <img class="card-show-more__image" src="img/show-more.svg" width="30" height="30" alt="Показать больше товаров">
+            <img class="card-show-more__image" src="img/show-more.svg" width="30" height="30"
+              alt="Показать больше товаров">
             <h2 class="card-show-more__title">Показать еще 100500 товаров</h2>
             <p class="card-show-more__description">На самом деле вкусов гораздо больше!</p>
             <button class="card-show-more__button button button--gray" type="button">показать все</button>
@@ -213,71 +215,60 @@
 
     <section class="extra-goods">
       <div class="extra-goods__wrapper container-content">
-      <h2 class="extra-goods__title">Дополнительные товары</h2>
-      <ul class="extra-goods__list">
-        <li class="extra-goods__item extra-goods-item">
-          <h3 class="extra-goods-item__title">Сахарозаменитель</h3>
-          <p class="extra-goods-item__description">1 упаковка (100 г)
-            <span class="extra-goods-item__value">200 Р.</span>
-          </p>
-          <button class="extra-goods-item__button button" type="button">Заказать</button>
-        </li>
+        <h2 class="extra-goods__title">Дополнительные товары</h2>
+        <ul class="extra-goods__list">
+          <li class="extra-goods__item extra-goods-item">
+            <h3 class="extra-goods-item__title">Сахарозаменитель</h3>
+            <p class="extra-goods-item__description">1 упаковка (100 г)
+              <span class="extra-goods-item__value">200 Р.</span>
+            </p>
+            <button class="extra-goods-item__button button" type="button">Заказать</button>
+          </li>
 
-        <li class="catalog__extra-goods-item extra-goods-item">
-          <h3 class="extra-goods-item__title">Питьевая вода</h3>
-          <p class="extra-goods-item__description">5 литров
-            <span class="extra-goods-item__value">50 Р.</span>
-          </p>
-          <button class="extra-goods-item__button button" type="button">Заказать</button>
-        </li>
+          <li class="catalog__extra-goods-item extra-goods-item">
+            <h3 class="extra-goods-item__title">Питьевая вода</h3>
+            <p class="extra-goods-item__description">5 литров
+              <span class="extra-goods-item__value">50 Р.</span>
+            </p>
+            <button class="extra-goods-item__button button" type="button">Заказать</button>
+          </li>
 
-        <li class="catalog__extra-goods-item extra-goods-item">
-          <h3 class="extra-goods-item__title">Молоко</h3>
-          <p class="extra-goods-item__description">1 литр
-            <span class="extra-goods-item__value">100 Р.</span>
-          </p>
-          <button class="extra-goods-item__button button" type="button">Заказать</button>
-        </li>
+          <li class="catalog__extra-goods-item extra-goods-item">
+            <h3 class="extra-goods-item__title">Молоко</h3>
+            <p class="extra-goods-item__description">1 литр
+              <span class="extra-goods-item__value">100 Р.</span>
+            </p>
+            <button class="extra-goods-item__button button" type="button">Заказать</button>
+          </li>
 
-        <li class="catalog__extra-goods-item extra-goods-item">
-          <h3 class="extra-goods-item__title">Витамины</h3>
-          <p class="extra-goods-item__description">1 упаковка (30 г)
-            <span class="extra-goods-item__value">300 Р.</span>
-          </p>
-          <button class="extra-goods-item__button button" type="button">Заказать</button>
-        </li>
-      </ul>
+          <li class="catalog__extra-goods-item extra-goods-item">
+            <h3 class="extra-goods-item__title">Витамины</h3>
+            <p class="extra-goods-item__description">1 упаковка (30 г)
+              <span class="extra-goods-item__value">300 Р.</span>
+            </p>
+            <button class="extra-goods-item__button button" type="button">Заказать</button>
+          </li>
+        </ul>
+    </section>
 
-      <div class="catalog__special-offer special-offer">
-        <div class="special-offer__image-wrapper"></div>
-          <svg width="78" height="80" viewBox="0 0 78 80" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path
-              d="M64.016 34.713H14.03c-1.754 0-3.182-1.418-3.182-3.16v-9.469c0-1.742 1.428-3.16 3.182-3.16h49.984c1.754 0 3.18 1.418 3.18 3.16v9.469c0 1.742-1.426 3.16-3.18 3.16ZM14.03 21.346a.751.751 0 0 0-.744.738v9.469c0 .407.334.738.744.738h49.984c.41 0 .743-.331.743-.738v-9.469a.75.75 0 0 0-.743-.738H14.03Z"
-              fill="#fff" />
-            <path
-              d="M57.045 67.149H20.999c-3.377 0-6.125-2.73-6.125-6.086V33.502c0-.669.546-1.212 1.219-1.212s1.219.543 1.219 1.212v27.56c0 2.021 1.654 3.665 3.687 3.665h36.046c2.032 0 3.686-1.644 3.686-3.664V33.502c0-.669.546-1.212 1.219-1.212.672 0 1.218.543 1.218 1.212v27.56c0 3.357-2.747 6.087-6.123 6.087Z"
-              fill="#fff" />
-            <path
-              d="M39.023 67.149a1.215 1.215 0 0 1-1.22-1.211V33.502c0-.669.547-1.212 1.22-1.212.672 0 1.218.543 1.218 1.212v32.435c0 .67-.545 1.212-1.218 1.212ZM23.811 21.341c-3.814-2.054-5.238-6.808-3.173-10.6 2.064-3.789 6.848-5.204 10.665-3.154 5.814 3.13 8.954 11.86 9.084 12.23l-2.3.804c-.029-.083-2.961-8.222-7.944-10.904-2.635-1.415-5.937-.438-7.36 2.177-1.426 2.618-.444 5.9 2.19 7.318l-1.162 2.13Z"
-              fill="#fff" />
-            <path
-              d="m54.231 21.341-1.16-2.13a5.376 5.376 0 0 0 2.622-3.207 5.327 5.327 0 0 0-.431-4.109 5.382 5.382 0 0 0-3.226-2.604 5.426 5.426 0 0 0-4.134.426c-4.982 2.682-7.915 10.82-7.944 10.903l-2.3-.803c.131-.37 3.27-9.101 9.084-12.23a7.859 7.859 0 0 1 5.99-.617 7.8 7.8 0 0 1 4.674 3.771 7.72 7.72 0 0 1 .623 5.953 7.788 7.788 0 0 1-3.798 4.647ZM61.95 50.931H16.093a1.215 1.215 0 0 1-1.219-1.21c0-.67.546-1.212 1.219-1.212H61.95c.672 0 1.218.543 1.218 1.211 0 .669-.545 1.211-1.218 1.211Z"
-              fill="#fff" />
-          </svg>
-        </div>
-          <p class="special-offer__description">Закажите все и получите чехол для кота в подарок!</p>
-
-      </div>
+    <section class="special-offer container-content">
+      <div class="special-offer__content-wrapper">
+        <img class="special-offer__image-gift" src="./img/special-offer.svg" width="78" height="80"
+          alt="Логотип подарка">
+        <p class="special-offer__description">Закажите все и получите чехол для кота в подарок!</p>
       </div>
     </section>
 
-    <section class="cooperation">
+
+
+    <section class="cooperation cooperation--gray">
       <div class="cooperation__wrapper container-content">
         <h2 class="cooperation__title">приглашаем к сотрудничеству дилеров!</h2>
         <p class="cooperation__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
       </div>
       <div class="cooperation__map-wrapper">
-        <img class="cooperation__map" src="img/location.jpg" width="320" height="362" alt="Расположение магазина на карте">
+        <img class="cooperation__map" src="img/location.jpg" width="320" height="362"
+          alt="Расположение магазина на карте">
       </div>
     </section>
   </main>
@@ -285,7 +276,17 @@
   <footer class="main-footer">
     <div class="main-footer__wrapper container-content">
       <a class="main-footer__link" href="index.html">
-        <svg width="128" height="24" viewBox="0 0 128 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(#a)" fill="#111"><path d="M1.603 22.051A9.498 9.498 0 0 1 0 16.308V7.795a9.63 9.63 0 0 1 1.502-5.846C2.604.615 4.307 0 6.811 0s4.106.615 5.108 1.744a7.487 7.487 0 0 1 1.502 5.025v2.052H8.513V6.46a5.157 5.157 0 0 0-.3-2.05 1.463 1.463 0 0 0-.579-.63 1.415 1.415 0 0 0-.823-.191c-.701 0-1.202.205-1.403.718a6.774 6.774 0 0 0-.3 2.256v10.974a4.334 4.334 0 0 0 .4 2.154c.2.513.702.718 1.403.718.7 0 1.102-.205 1.302-.718.228-.693.33-1.423.3-2.154v-2.461h4.908v2.051a7.98 7.98 0 0 1-1.502 5.128c-1.002 1.231-2.705 1.847-5.108 1.847-2.404-.103-4.207-.718-5.208-2.052ZM19.33.308h5.71l4.206 23.384h-4.607l-.802-4.923h-3.305l-.801 4.923h-4.708L19.33.308Zm4.107 15.384-1.202-9.128-1.202 9.128h2.404ZM32.751 4.205h-3.405V.308h11.918v3.794H37.86v19.59h-5.108V4.205ZM50.379.308h8.814v2.461h-5.71v7.692h4.608v2.36h-4.607v8.615h5.709v2.359h-8.914V.308h.1ZM61.797.308H64l6.51 15.487V.308h2.604v23.384h-2.003l-6.61-16v16h-2.704V.308ZM76.119.308h8.814v2.461h-5.71v7.692h4.608v2.36h-4.607v8.615h5.709v2.359h-8.814V.308ZM87.537.308h4.607a7.873 7.873 0 0 1 5.108 1.436c1.102.923 1.602 2.564 1.602 4.717 0 2.975-.901 4.821-2.804 5.436l3.205 11.693H96.15l-3.005-10.975h-2.503V23.59h-3.205V.308h.1Zm4.407 10.05a4.302 4.302 0 0 0 2.904-.82c.601-.512.902-1.538.902-3.077a6.772 6.772 0 0 0-.3-2.256 2.583 2.583 0 0 0-1.103-1.23 4.473 4.473 0 0 0-2.203-.411h-1.402v7.692h1.202v.103ZM102.861 21.949a10.566 10.566 0 0 1-1.402-5.95V8.206c-.025-1.486.143-2.97.5-4.41a5.204 5.204 0 0 1 1.903-2.667 6.421 6.421 0 0 1 3.706-.923c2.103 0 3.606.513 4.507 1.641a7.982 7.982 0 0 1 1.402 5.128v.82h-3.004v-.717a15.503 15.503 0 0 0-.201-2.564 2.056 2.056 0 0 0-.801-1.334 3.04 3.04 0 0 0-1.903-.512 2.955 2.955 0 0 0-2.003.615 2.349 2.349 0 0 0-.801 1.641 19.734 19.734 0 0 0-.201 2.77v8.717a9.527 9.527 0 0 0 .601 3.898c.401.82 1.202 1.128 2.404 1.128.475.06.956-.024 1.384-.243a2.45 2.45 0 0 0 1.02-.988 9.635 9.635 0 0 0 .701-4.102V14.46h-2.905v-2.359h5.809v11.59h-2.003l-.3-2.666a4.18 4.18 0 0 1-1.554 2.21 4.016 4.016 0 0 1-2.553.764 4.907 4.907 0 0 1-2.406-.47 5.037 5.037 0 0 1-1.9-1.581ZM119.987 15.487 115.08.41h3.004l3.506 11.282L124.995.41H128l-4.908 15.077v8.205h-3.004v-8.205h-.101Z"/></g><defs><clipPath id="a"><path fill="#fff" d="M0 0h128v24H0z"/></clipPath></defs></svg>
+        <svg width="128" height="24" viewBox="0 0 128 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <g clip-path="url(#a)" fill="#111">
+            <path
+              d="M1.603 22.051A9.498 9.498 0 0 1 0 16.308V7.795a9.63 9.63 0 0 1 1.502-5.846C2.604.615 4.307 0 6.811 0s4.106.615 5.108 1.744a7.487 7.487 0 0 1 1.502 5.025v2.052H8.513V6.46a5.157 5.157 0 0 0-.3-2.05 1.463 1.463 0 0 0-.579-.63 1.415 1.415 0 0 0-.823-.191c-.701 0-1.202.205-1.403.718a6.774 6.774 0 0 0-.3 2.256v10.974a4.334 4.334 0 0 0 .4 2.154c.2.513.702.718 1.403.718.7 0 1.102-.205 1.302-.718.228-.693.33-1.423.3-2.154v-2.461h4.908v2.051a7.98 7.98 0 0 1-1.502 5.128c-1.002 1.231-2.705 1.847-5.108 1.847-2.404-.103-4.207-.718-5.208-2.052ZM19.33.308h5.71l4.206 23.384h-4.607l-.802-4.923h-3.305l-.801 4.923h-4.708L19.33.308Zm4.107 15.384-1.202-9.128-1.202 9.128h2.404ZM32.751 4.205h-3.405V.308h11.918v3.794H37.86v19.59h-5.108V4.205ZM50.379.308h8.814v2.461h-5.71v7.692h4.608v2.36h-4.607v8.615h5.709v2.359h-8.914V.308h.1ZM61.797.308H64l6.51 15.487V.308h2.604v23.384h-2.003l-6.61-16v16h-2.704V.308ZM76.119.308h8.814v2.461h-5.71v7.692h4.608v2.36h-4.607v8.615h5.709v2.359h-8.814V.308ZM87.537.308h4.607a7.873 7.873 0 0 1 5.108 1.436c1.102.923 1.602 2.564 1.602 4.717 0 2.975-.901 4.821-2.804 5.436l3.205 11.693H96.15l-3.005-10.975h-2.503V23.59h-3.205V.308h.1Zm4.407 10.05a4.302 4.302 0 0 0 2.904-.82c.601-.512.902-1.538.902-3.077a6.772 6.772 0 0 0-.3-2.256 2.583 2.583 0 0 0-1.103-1.23 4.473 4.473 0 0 0-2.203-.411h-1.402v7.692h1.202v.103ZM102.861 21.949a10.566 10.566 0 0 1-1.402-5.95V8.206c-.025-1.486.143-2.97.5-4.41a5.204 5.204 0 0 1 1.903-2.667 6.421 6.421 0 0 1 3.706-.923c2.103 0 3.606.513 4.507 1.641a7.982 7.982 0 0 1 1.402 5.128v.82h-3.004v-.717a15.503 15.503 0 0 0-.201-2.564 2.056 2.056 0 0 0-.801-1.334 3.04 3.04 0 0 0-1.903-.512 2.955 2.955 0 0 0-2.003.615 2.349 2.349 0 0 0-.801 1.641 19.734 19.734 0 0 0-.201 2.77v8.717a9.527 9.527 0 0 0 .601 3.898c.401.82 1.202 1.128 2.404 1.128.475.06.956-.024 1.384-.243a2.45 2.45 0 0 0 1.02-.988 9.635 9.635 0 0 0 .701-4.102V14.46h-2.905v-2.359h5.809v11.59h-2.003l-.3-2.666a4.18 4.18 0 0 1-1.554 2.21 4.016 4.016 0 0 1-2.553.764 4.907 4.907 0 0 1-2.406-.47 5.037 5.037 0 0 1-1.9-1.581ZM119.987 15.487 115.08.41h3.004l3.506 11.282L124.995.41H128l-4.908 15.077v8.205h-3.004v-8.205h-.101Z" />
+          </g>
+          <defs>
+            <clipPath id="a">
+              <path fill="#fff" d="M0 0h128v24H0z" />
+            </clipPath>
+          </defs>
+        </svg>
       </a>
       <ul class="main-footer__social-list social-list">
         <li class="social-list__item">
