--- a/source/form.html
+++ b/source/form.html
@@ -183,8 +183,10 @@
         <p class="cooperation__address">ул. Большая Конюшенная, д. 19/8 <span class="cooperation__city">Санкт-Петербург</span></p>
       </div>
       <div class="cooperation__map-wrapper">
-        <img class="cooperation__map" src="img/location.jpg" width="320" height="362"
-          alt="Расположение магазина на карте">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3361.254739502559!2d30.321884639882988!3d59.938546600764305!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x469631f6df7d3481%3A0xc0016be317f9a6fd!2sCat%20Energy!5e0!3m2!1sru!2sru!4v1660850615077!5m2!1sru!2sru"
+          width="320" height="362" style="border:0;" allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
     </section>
   </main>
