--- a/source/index.html
+++ b/source/index.html
@@ -86,21 +86,25 @@
         <h2 class="features__title page-title"> Как это работает </h2>
         <ul class="features__list">
           <li class="features__item features__item--food">
+            <div class="features__square features__square--food"></div>
             <p class="features__description">
               Функциональное питание содержит только полезные питательные вещества.
             </p>
           </li>
           <li class="features__item features__item--cook">
+            <div class="features__square features__square--cook"></div>
             <p class="features__description">
               Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
             </p>
           </li>
           <li class="features__item features__item--eat">
+            <div class="features__square features__square--eat"></div>
             <p class="features__description">
               Замените один-два приема обычной еды на наше функциональное питание.
             </p>
           </li>
           <li class="features__item features__item--result">
+            <div class="features__square features__square--result"></div>
             <p class="features__description">
               Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
             </p>
