--- a/source/catalog.html
+++ b/source/catalog.html
@@ -11,8 +11,12 @@
 <body class="page__body">
   <header class="main-header">
     <div class="main-header__wrapper container-content">
-      <a class="main-header__logo">
-        <img class="main-header__logo-image" src="img/logo-mobile.svg" width="33" height="38" alt="Логотип Кэт энерджи">
+      <a class="main-header__logo" href="index.html">
+        <picture>
+          <source media="(min-width: 1400px)" srcset="img/logo-desktop.svg" width="202" height="59">
+          <source media="(min-width: 768px)" srcset="img/logo-tablet.svg" width="174" height="52">
+          <img class="main-header__logo-image" src="img/logo-mobile.svg" width="33" height="38" alt="Логотип Кэт энерджи">
+        </picture>
       </a>
       <a class="main-header__logo-secondary">
         <img class="main-header__logo-image" src="img/logo-mobile-secondary.svg" width="101" height="18"
