--- a/source/index.html
+++ b/source/index.html
@@ -12,13 +12,17 @@
   <header class="main-header main-header-desktop-image">
     <div class="main-header__wrapper container-content">
       <a class="main-header__logo" href="index.html">
-        <img class="main-header__logo-image" src="img/logo-mobile.svg" width="33" height="38" alt="Логотип Кэт энерджи">
+        <picture>
+          <source media="(min-width: 1400px)" srcset="img/logo-desktop.svg" width="202" height="59">
+          <source media="(min-width: 768px)" srcset="img/logo-tablet.svg" width="174" height="52">
+          <img class="main-header__logo-image" src="img/logo-mobile.svg" width="33" height="38" alt="Логотип Кэт энерджи">
+        </picture>
       </a>
       <a class="main-header__logo-secondary" href="index.html">
         <img class="main-header__logo-image" src="img/logo-mobile-secondary.svg" width="101" height="18"
           alt="Кэт энерджи">
       </a>
-        <nav class="main-nav main-nav--opened main-nav--nojs">
+        <nav class="main-nav main-nav--closed main-nav--nojs">
           <button class="main-nav__toggle" type="button">
             <span class="visually-hidden">
               Открыть меню
@@ -38,7 +42,6 @@
             </ul>
           </div>
         </nav>
-
     </div>
   </header>
 
@@ -51,8 +54,13 @@
         <p class="search-form__subtitle">
           Занялся собой? Займись котом!
         </p>
-        <img class="search-form__image" src="img/index-can-mobile.png" width="280" height="270"
+        <picture>
+          <source media="(min-width: 1440px)" srcset="img/index-can-desktop.png" width="552" height="499">
+          <source media="(min-width: 768px)" srcset="img/index-can-tablet.png" width="709" height="609">
+          <img class="search-form__image" src="img/index-can-mobile.png" width="280" height="270"
           alt="Банка кошачьей еды">
+        </picture>
+
         <a class="search-form__button button" href="form.html">подобрать программу</a>
       </div>
     </section>
@@ -148,9 +156,9 @@
 
             <div class="example__range-scale-bar">
               <div class="example__range-scale-circle">
-                <span class="example__range-scale-button">
+                <button class="example__range-scale-button" type="button">
                   <svg width="24" height="18" viewBox="0 0 24 18" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M8 0 0 9l8 9V0ZM24 9l-8-9v18l8-9Z" fill="#666"/></svg>
-                </span>
+                </button>
               </div>
             </div>
           </div>
